@@ -53,7 +53,7 @@ R   - and implement the rest
 R   - turn the received socks addr:port into a digest for setting .exit
     - be able to connect without having a server descriptor, to bootstrap.
 R     - handle connect-dir streams that don't have a chosen_exit_name set.
-N     - include ORPort in DirServers lines so we can know where to connect.
+      o include ORPort in DirServers lines so we can know where to connect.
         list the orport as 0 if it can't handle begin_dir.
 N     - list versions in status page
         a new line in the status entry. "Tor 0.1.2.2-alpha". If it's
